--- a/common/domain/pom.xml
+++ b/common/domain/pom.xml
@@ -3,14 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.javasmiths.encodingfarm</groupId>
-        <artifactId>encoding-farm</artifactId>
+        <artifactId>encoding-common</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>encoding-sample</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>domain</module>
-        <module>gateway</module>
-    <module>web</module>
-  </modules>
+    <artifactId>encoding-common-domain</artifactId>
+    <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
+    </dependencies>
 </project>
