--- a/manager/web-async/pom.xml
+++ b/manager/web-async/pom.xml
@@ -14,9 +14,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.javasmiths.encodingfarm</groupId>
+            <artifactId>encoding-sample-domain</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.javasmiths.encodingfarm</groupId>
+            <artifactId>encoding-manager-domain</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
+        
     </dependencies>
 
     <build>
