T319 Mapstructuur in encoding-worker-domain gemaakt

--- a/worker/domain/pom.xml
+++ b/worker/domain/pom.xml
@@ -8,4 +8,16 @@
     </parent>
     <artifactId>encoding-worker-domain</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>encoding-common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
