--- a/worker/domain/pom.xml
+++ b/worker/domain/pom.xml
@@ -14,6 +14,14 @@
             <artifactId>encoding-common-domain</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <type>jar</type>
