--- a/worker/web/pom.xml
+++ b/worker/web/pom.xml
@@ -12,7 +12,19 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <dependencies>
+    <dependencies>        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>encoding-common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
