--- a/worker/web/pom.xml
+++ b/worker/web/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>encoding-common-domain</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
         </dependency>
