T383 jobs en entities kunnen bekeken en aangemaakt worden op html pagina's

--- a/worker/web/pom.xml
+++ b/worker/web/pom.xml
@@ -20,7 +20,10 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>dot-luv</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
