--- a/client/web/pom.xml
+++ b/client/web/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>dot-luv</artifactId>
         </dependency>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>encoding-client-domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
