--- a/worker/gateway/pom.xml
+++ b/worker/gateway/pom.xml
@@ -20,7 +20,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>encoding-worker-domain</artifactId>
-            <version>${project.version}</version>
+            <version>0.1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
