--- a/manager/domain/pom.xml
+++ b/manager/domain/pom.xml
@@ -8,32 +8,19 @@
     </parent>
     <artifactId>encoding-manager-domain</artifactId>
     <packaging>jar</packaging>
-     <dependencies>
-        <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-        </dependency>
-        <dependency> 
-            <groupId>net.bootsfaces</groupId>
-            <artifactId>bootsfaces</artifactId>
-        </dependency>
+    <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>encoding-manager-web-admin</artifactId>
-            <version>${project.version}</version>
+            <artifactId>encoding-common-domain</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>encoding-manager-gateway</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.1.Final</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
-            <artifactId>javaee-web-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.primefaces.themes</groupId>
-            <artifactId>dot-luv</artifactId>
+            <artifactId>javaee-api</artifactId>
         </dependency>
     </dependencies>
 
