T412 JSON implementatie test
- Mogelijk om input JSON-file mee te geven in resources folder.
- Deze JSON file kan worden omgezet naar een REST call
TODO:
Uit JSON file objecten maken

--- a/manager/gateway/pom.xml
+++ b/manager/gateway/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>payara-micro</artifactId>
             <version>4.1.153</version>
             <type>jar</type>
-            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
         </dependency>
     </dependencies>
 </project>
