--- a/distributor/web/src/main/webapp/WEB-INF/web.xml
+++ b/distributor/web/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>video.xhtml</welcome-file>
+        <welcome-file>testindex.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
