--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
                 <version>7.0</version>
                 <scope>provided</scope>
             </dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>provided</scope>
+			</dependency>
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
