--- a/worker/domain/pom.xml
+++ b/worker/domain/pom.xml
@@ -19,6 +19,10 @@
             <version>4.3.1.Final</version>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
         </dependency>
