--- a/manager/web-admin/pom.xml
+++ b/manager/web-admin/pom.xml
@@ -31,7 +31,12 @@
             <artifactId>encoding-manager-gateway</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
+            <dependency>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>encoding-worker-gateway</artifactId>
+                  <version>${project.version}</version>
+            </dependency>
+            <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
