--- a/distributor/web/pom.xml
+++ b/distributor/web/pom.xml
@@ -30,6 +30,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>encoding-distributor-gateway</artifactId>
             <version>${project.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
